--- a/src/Pages/CategoryPage/categoryPage.css
+++ b/src/Pages/CategoryPage/categoryPage.css
@@ -203,12 +203,14 @@ footer {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 32px;
 }
 .overlay {
   background-color: rgba(0, 0, 0, 0.584);
   width: 100%;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  border-radius: 32px;
 }
 .CardContentBottom {
   color: black;
@@ -241,6 +243,7 @@ footer {
   padding: 1rem;
   transition: 1s ease;
   line-height: 35px;
+  border-radius: 32px;
 }
 
 .sidebar-category {
